<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.productview.ProductViewFragment">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/edit_custom_action_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/edit_backArrow"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_margin="@dimen/_10sdp"
                android:contentDescription="@string/back_arrow"
                android:src="@drawable/ic_baseline_arrow_back_24"
                android:tint="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/appCompatTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:text="@string/product"
                android:textColor="@color/white"
                android:textSize="@dimen/_22ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.github.ybq.android.spinkit.SpinKitView
            android:id="@+id/view_spin_kit"
            style="@style/SpinKitView.Large.Circle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="invisible"
            app:SpinKit_Color="@color/yellow"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardView"
            app:cardCornerRadius="@dimen/_45sdp"
            app:cardPreventCornerOverlap="false"
            android:layout_margin="@dimen/_18sdp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_200sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/item_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_custom_action_bar">

            <ImageView
                android:id="@+id/item_image"
                android:layout_width="match_parent"
                android:layout_height="270dp"
                android:transitionName="imageView"
                app:layout_collapseMode="parallax"
                android:contentDescription="@string/item_name"
                android:src="@drawable/ic_launcher_background" />
        </com.google.android.material.card.MaterialCardView>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_18sdp"
            android:textColor="@color/blue"
            android:maxLines="1"
            android:textSize="@dimen/_18ssp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardView" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/item_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_4sdp"
            android:layout_margin="@dimen/_18sdp"

            android:textColor="@color/black"
            android:textSize="@dimen/_18ssp"
            android:textAlignment="textEnd"
            android:layout_marginBottom="@dimen/_4sdp"
            app:layout_constraintEnd_toStartOf="@id/item_currency"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/item_name" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/item_currency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_currency"
            android:textColor="@color/yellow"
            android:textSize="@dimen/_18ssp"
            android:layout_marginStart="@dimen/_2sdp"
            android:layout_margin="@dimen/_18sdp"
            android:textStyle="bold"
            android:layout_marginBottom="@dimen/_4sdp"
            app:layout_constraintStart_toEndOf="@id/item_price"
            app:layout_constraintTop_toBottomOf="@id/item_name" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/item_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_18sdp"
            android:text="@string/quantity"
            android:textColor="@color/blue"
            android:maxLines="1"
            android:textSize="@dimen/_18ssp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/item_price" />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/item_quantity_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/_18ssp"
            android:layout_marginStart="@dimen/_2sdp"
            android:layout_margin="@dimen/_18sdp"
            android:textStyle="bold"
            android:layout_marginBottom="@dimen/_4sdp"
            app:layout_constraintStart_toEndOf="@id/item_quantity"
            app:layout_constraintTop_toBottomOf="@id/item_price" />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/delete_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:background="@color/red"
            android:text="@string/delete_item"
            android:textColor="@color/white"
            android:textSize="@dimen/_16ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>