<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="@dimen/_120sdp"
        android:layout_height="@dimen/_150sdp"
        android:id="@+id/item_card"
        app:rippleColor="@color/blue_dark"
        android:elevation="@dimen/_14sdp"
        android:shadowColor="@color/yellow"
        android:padding="@dimen/_16sdp"
        android:layout_margin="@dimen/_8sdp"
        android:translationZ="@dimen/_8sdp"
        android:background="@color/gray"
        app:cardCornerRadius="@dimen/_12sdp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:id="@+id/container"
            android:layout_height="match_parent">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardView"
                app:cardCornerRadius="@dimen/_45sdp"
                app:cardPreventCornerOverlap="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/item_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/item_image"
                    android:layout_width="@dimen/_90sdp"
                    android:layout_height="@dimen/_90sdp"
                    android:transitionName="imageView"
                    android:src="@drawable/ic_launcher_background"
                    android:contentDescription="@string/item_name" />
            </com.google.android.material.card.MaterialCardView>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/item_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_4sdp"
                android:text="@string/item_name"
                android:textColor="@color/blue"
                android:maxLines="1"
                android:textSize="@dimen/_10ssp"
                android:textStyle="bold"
                android:layout_marginStart="@dimen/_4sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cardView" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/item_price"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_2sdp"
                android:text="@string/item_price"
                android:textColor="@color/black"
                android:textSize="@dimen/_10ssp"
                app:layout_constraintHorizontal_bias=".70"
                android:textAlignment="textEnd"
                android:layout_marginBottom="@dimen/_4sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/item_currency"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/item_name" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/item_currency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_currency"
                android:textColor="@color/yellow"
                android:textSize="@dimen/_10ssp"
                android:layout_marginStart="@dimen/_2sdp"
                android:layout_marginEnd="@dimen/_4sdp"
                android:textStyle="bold"
                android:layout_marginBottom="@dimen/_4sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/item_price"
                app:layout_constraintTop_toBottomOf="@id/item_name" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>
</layout>